--- a/book/style.css
+++ b/book/style.css
@@ -1398,33 +1398,68 @@ p {
 .page img {
   width: 100%;
   height: 575px;
-  width: 400px
+  width: 400px;
   display: block;
   margin: auto;
 }
 @media (max-width: 900px) {
   body {
-    min-width: auto;
-    min-height: auto;
-    width: 100vw;
+    min-width: unset;
+    min-height: unset;
+    width: 100%;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    perspective: 1200px;
   }
 
   .book {
     width: 90vw;
-    height: 70vh;
-    transform: none;
+    height: auto;
+    max-width: 600px;
+    aspect-ratio: 847/654.5;
+    transform: translate(-50%, -50%) rotatex(10deg) rotatey(-10deg) scale(0.8);
+    margin: 20vh auto;
   }
 
   .page {
-    width: 45vw;
-    height: 70vh;
+    width: calc(90vw / 2);
+    max-width: 300px;
+    height: auto;
+    aspect-ratio: 423.5/654.5;
+    font-size: calc(14px + 0.5vw);
+    line-height: 1.5;
+    overflow-y: visible;
   }
 
   .page img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
+    object-fit: contain;
+  }
+
+  p {
+    margin-bottom: 1em;
+    font-size: inherit;
+  }
+
+  .instruction {
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    font-size: calc(12px + 0.5vw);
+  }
+}
+
+@media (max-width: 600px) {
+  .book {
+    transform: translate(-50%, -50%) rotatex(10deg) rotatey(-10deg) scale(0.6);
+    margin: 30vh auto;
+  }
+
+  body {
+    height: auto;
+    min-height: 100vh;
   }
 }
 
