--- a/book/style.css
+++ b/book/style.css
@@ -1419,13 +1419,19 @@ p {
   }
 
   .book {
-    position: relative;
+    position: absolute;
     width: 95vw;
     aspect-ratio: 847/654.5;
     height: auto;
     max-width: none;
-    transform: rotatex(10deg) rotatey(-10deg) scale(0.9);
-    margin-top: 10vh;
+    top: 5vh;
+    left: 50%;
+    transform-origin: center;
+    transform: translateX(-50%) rotatex(10deg) rotatey(-10deg) scale(0.9);
+  }
+
+  .instruction {
+    display: none;
   }
 
   .page {
@@ -1460,10 +1466,6 @@ p {
     max-width: 100%;
     overflow-wrap: break-word;
     font-size: clamp(10px, 2.5vw, 14px);
-  }
-
-  .instruction {
-    display: none;
   }
 
   .cover-front:nth-child(1) h1 {
@@ -1501,8 +1503,8 @@ p {
     width: 98vw;
     aspect-ratio: 847/654.5;
     height: auto;
-    transform: rotatex(10deg) rotatey(-10deg) scale(0.7);
-    margin-top: 8vh;
+    top: 3vh;
+    transform: translateX(-50%) rotatex(10deg) rotatey(-10deg) scale(0.7);
   }
 
   .page {
